--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "mongoose-unique-validator": "^4.0.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.32.5",
+    "sharp-multer": "^0.3.0"
   }
 }
